# ht32-dfu-tool

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: command.rs  device.rs  main.rs
