[package]
name = "ht32-dfu-tool"
version = "0.2.1"
authors = ["Hansem Ro <hansemro@outlook.com>"]
edition = "2021"
description = "CLI utility for performing HT32 ISP DFU operations over USB"
repository = "https://github.com/hansemro/ht32-dfu-tool"
keywords = ["usb", "ht32", "embedded"]
categories = ["command-line-utilities", "development-tools", "embedded"]
license = "GPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
crc = "3.0.1"
indicatif = "0.17.5"
rusb = "0.9.3"
